--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
       - flask
 
   flask:
-    image: "avtyumenev/flask:1.0"
+    image: "nikitasannikov/flask:1.0"
     container_name: flask
     environment:
       - FLASK_DEBUG=True
